--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jsdelivr": "index.min.js",
     "scripts": {
         "build": "terser --ecma 2015 --compress reduce_vars=false --mangle -o index.min.js < index.js",
-        "doctoc": "markdown-toc --bullets=- --maxdepth 3 -i README.md"
+        "build:doc": "toc-md README.md",
+        "prepublishOnly": "run-s build build:doc"
     },
     "files": [
         "index.js",
@@ -17,7 +18,9 @@
     ],
     "devDependencies": {
         "markdown-toc": "^1.2.0",
-        "terser": "^5.3.0"
+        "npm-run-all": "^4.1.5",
+        "terser": "^5.3.8",
+        "toc-md-alt": "^0.4.1"
     },
     "keywords": [
         "clone-into",
