--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "index.min.js"
     ],
     "devDependencies": {
+        "@types/greasemonkey": "^4.0.0",
         "markdown-toc": "^1.2.0",
         "npm-run-all": "^4.1.5",
         "terser": "^5.5.0",
